argocd/raw-manifests/local-production/k8sdashboard/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: k8s-dashboard-vs
  namespace: istio-system
spec:
  hosts:
    - "dashboard.prod.local"
  gateways:
    - istio-ingressgateway-production
  http:
    - route:
        - destination:
            host: k8sdashboard-prod-kong-proxy.kubernetes-dashboard.svc.cluster.local
            port:
              number: 80
